src/test/deca/context/valid/class/valid_override_method_return.deca
// Description:
//    Test of a a method that override a super class method with a different return
//    Test rule 2.7
//
// Result:
//
// History:
//    created on 12/01/2025

class MySuperClass{
    float myMethod(int a){
        return a;
    }
}

class MyClass extends MySuperClass{
    int myMethod(int a){
        return a;
    }
}

{
    //empty main
}